# BanjoRecomp

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/io/github/banjorecomp/android/: BanjoRecompiledActivity.java
android/app/src/main/res/values/: strings.xml
cmake/: file_to_c.cmake
include/: banjo_config.h  banjo_launcher.h  banjo_touch_controls.h
src/game/: config.cpp  recomp_api.cpp
src/main/: launcher_animation.cpp  main.cpp  touch_controls.cpp
